src/test/ui/rfc-2632-const-trait-impl/const-trait-bound-opt-out/in-trait-bounds.stderr
error: `?const` is not permitted in supertraits
  --> $DIR/in-trait-bounds.rs:5:10
   |
LL | trait T: ?const Super {}
   |          ^^^^^^^^^^^^

error: aborting due to previous error

